src/objects/Knowledge_Article_DK__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Chat_Answer__c</fullName>
        <label>Chat</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LN_Eurocom__c</fullName>
        <label>LN Eurocom</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Mail__c</fullName>
        <label>Mail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Web__c</fullName>
        <label>Web</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Work_Process__c</fullName>
        <label>Work Process</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Knowledge Article – DK</label>
    <pluralLabel>Knowledge Articles – DK</pluralLabel>
</CustomObject>